--- a/Article JMP/EstAndHypTestBayesCircGLM.Rnw
+++ b/Article JMP/EstAndHypTestBayesCircGLM.Rnw
@@ -70,6 +70,7 @@ library(tikzDevice)
 opts_knit$set(root.dir = "C:/Dropbox/Research/BayesMultCircCovariates")
 setwd(opts_knit$get('root.dir'))
 
+
 source("Spread/Figures/plotBetaLL.R")
 source("Spread/Figures/obtainBayesFactorsCircGLM.R")
 source("Code/describeCirc.R")
@@ -103,7 +104,7 @@ options("xtable.booktabs" = TRUE,
 opts_chunk$set(echo     = FALSE,
                dev      = 'tikz',
                external = TRUE,
-               cache    = FALSE,
+               cache    = TRUE,
                prompt   = FALSE,
                tidy     = TRUE,
                comment  = NA,
@@ -138,36 +139,35 @@ myTheme <- theme_bw()  +
 @
 
 \begin{abstract}
-Circular data are data measured in angles or directions. Although they occur in a wide variety of scientific fields, the number of methods for their analysis is limited.
-We develop a GLM-like model for circular data within the Bayesian framework, using the von Mises distribution. The model allows inclusion of both continuous and categorical covariates. In a frequentist setting, this model is plagued by the likelihood surface of its regression coefficients, which is not log-concave. In a Bayesian context, a weakly informative prior solves this issue, while for other paramaters noninformative priors are available. In addition to an MCMC sampling algorithm, we develop Bayesian hypothesis tests based on the Bayes factor for both equality and inequality constrained hypotheses. In a simulation study, it can be seen that our method performs well. Finally, we apply this model to a dataset from experimental psychology, and show that it provides valuable insight for applied researchers. Extensions to dependent observations are within reach by means of the multivariate von Mises distribution.
+Motivated by a study from cognitive psychology, we develop a Generalized Linear Model for circular data within the Bayesian framework, using the von Mises distribution. Although circular data arise in a wide variety of scientific fields, the number of methods for their analysis is limited. Our model allows inclusion of both continuous and categorical covariates. In a frequentist setting, this type of model is plagued by the likelihood surface of its regression coefficients, which is not logarithmically concave. In a Bayesian context, a weakly informative prior solves this issue, while for other paramaters noninformative priors are available. In addition to an MCMC sampling algorithm, we develop Bayesian hypothesis tests based on the Bayes factor for both equality and inequality constrained hypotheses. In a simulation study, it can be seen that our method performs well. Finally, we apply this model to a dataset from experimental psychology, and show that it provides valuable insight for applied researchers. Extensions to dependent observations are within reach by means of the multivariate von Mises distribution.
 \end{abstract}
 
-\textbf{Keywords}: Circular data; Mcmc; Bayes factor; savage-dickey density ratio; Simulation study;
+\textbf{Keywords}: Circular data; MCMC; Bayes factor; Savage-Dickey density ratio;
 
 \section{Introduction}
 
-Circular data are measured in angles or directions, and are frequently encountered in scientific fields as diverse as life sciences \citep{mardianew}, behavioural biology \citep{bulbert2015danger}, cognitive psychology \citep{kaas2006haptic}, bioinformatics \citep{mardia2008multivariate}, political science \citep{gill2010} and environmental sciences \citep{arnold2006recent}. In psychology, circular data occur often in motor behaviour research \citep{mechsner2001perceptual, mechsner2007bimanual, postma2008keep, baayen2012test}, as well as in the application of circumplex models \citep{Leary1957, gurtman2003circumplex, gurtman2009exploring}. Circular data differ from linear data in the sense that circular data are measured in a periodical sample space. For example, an angle of $1^{\circ}$ is quite close to an angle $359^{\circ},$ although linear intuition suggests otherwise.
+Circular data are measured in angles or directions, and are frequently encountered in scientific fields as diverse as life sciences \citep{mardianew}, behavioural biology \citep{bulbert2015danger}, cognitive psychology \citep{kaas2006haptic}, bioinformatics \citep{mardia2008multivariate}, political science \citep{gill2010} and environmental sciences \citep{lagona2016regression, lagona2015hidden, arnold2006recent}. In psychology, circular data occur often in motor behaviour research \citep{mechsner2001perceptual, mechsner2007bimanual, postma2008keep, baayen2012test}, as well as in the application of circumplex models \citep{Leary1957, gurtman2003circumplex, gurtman2009exploring}. Circular data differ from linear data in the sense that circular data are measured in a periodical sample space. For example, an angle of $1^{\circ}$ is quite close to an angle $359^{\circ},$ although linear intuition suggests otherwise.
 
 Therefore, linear models may not properly describe the process that has generated the circular data of interest. Circular data analysis has been developed to deal with this, although attention to this type of analysis has been limited. Only slightly more than a handful of in-depth books on circular data analysis have been published \citep{fisher1995statistical, mardia1999directional, pewsey2013circular, jammalamadaka2001topics}, and in general, statistical methods for circular data are somewhat limited.
 
-Here, attention is turned to analysis of datasets with a circular outcome, predicted by covariates that can be continuous (linear) or categorical. This leads to a structure similar to the generalized linear model (GLM), which has both multiple regression and ANCOVA as special cases.
+Here, attention is turned to analysis of datasets with a circular outcome, predicted by covariates that can be continuous (linear) or categorical. This leads to a structure similar to the Generalized Linear Model (GLM), which has both multiple regression and ANCOVA as special cases.
 
-Three main approaches to circular data analysis might be distinguished. First, the intrinsic approach employs distributions directly defined on the circle  \citep{fisher1992regression, artes2008hypothesis}. Second, the wrapping approach 'wraps' a univariate distribution around the circle by taking the modulus of data on the real line \citep{ferrari2009wrapping, coles1998inference}. Third, the embedding approach projects points from a bivariate distribution to the circle \citep{nunez2011bayesian, nunez2014bayesian, hernandez2015general, maruotti2016analyzing}. While the wrapping and embedding approach provide promising avenues of study in their own right, here attention is restricted to the intrinsic approach, as it might provide the most natural analysis of circular data.
+Three main approaches to circular data analysis might be distinguished. First, the intrinsic approach employs distributions directly defined on the circle  \citep{fisher1992regression, artes2008hypothesis}. Second, the wrapping approach 'wraps' a univariate distribution around the circle by taking the modulus of data on the real line \citep{ferrari2009wrapping, coles1998inference}. Third, the embedding approach projects points from a bivariate distribution to the circle \citep{nunez2011bayesian, nunez2014bayesian, wang2014modeling, hernandez2015general, maruotti2016analyzing}. While the wrapping and embedding approach provide promising avenues of study in their own right, here attention is restricted to the intrinsic approach, as it might provide the most natural analysis of circular data.
 
 Within the intrinsic approach, the circular analogue to the Normal distribution is the von Mises distribution \citep{von1918ganzzahligkeit}. This symmetric unimodal distribution is given by
 \begin{equation}
 \mathcal{M}(\theta \mid \mu, \kappa) = \left[ 2 \pi I_0(\kappa) \right]^{-1}
 \exp \left( \kappa \cos \left[ \theta - \mu \right] \right),
 \end{equation}
-where \( \theta \) represents an angular measurement, \( \mu \) represents the mean direction, \( \kappa \) is a concentration parameter, and \( I_0(\cdot) \) represents the modified Bessel function of the first kind and order zero. Some examples of frequentist methods that employ the von Mises distribution are a circular ANOVA \citep{watson1956construction}, circular ANCOVA \citep{artes2008hypothesis} and circular regression \citep{fisher1992regression}. Here, a Bayesian analysis of such models will be developed.
+where \( \theta \in (-\pi, \pi) \) represents an angular measurement, \( \mu \in (-\pi, \pi) \) represents the mean direction, \( \kappa \in \mathbb{R}^+ \) is a concentration parameter, and \( I_0(\cdot) \) represents the modified Bessel function of the first kind and order zero. Some examples of frequentist methods that employ the von Mises distribution are a circular ANOVA \citep{watson1956construction}, circular ANCOVA \citep{artes2008hypothesis} and circular regression \citep{fisher1992regression}. Here, a Bayesian analysis of such models will be developed.
 
 Early approaches to Markov chain Monte Carlo (MCMC) sampling for the von Mises distribution provide a method for sampling \( \mu \) when \( \kappa \) is known \citep{mardia1976bayesian} and sampling both parameters for a single group of data \citep{damien1999fullbayes}. \citet{guttorp1988finding} present a conjugate prior for the von Mises model. Recent theoretical work has much improved the efficiency of the sampling of the concentration parameter of the von Mises distribution \citep{forbes2015fast}.
 
 Some development has also taken place in the field of semiparametric inference for circular data models, often using Dirichlet process priors \citep{Bhattacharya2009, ghosh2003semiparametric, george2006semiparametric, mcvinish2008semiparametric}. In particular, \citet{ghosh2003semiparametric} provide Bayes factors for the simple hypothesis test of equality of two means. However, these methods are generally complex, which makes it hard to extend these models, for example to include covariates. Therefore, we will focus on parametric models, with residuals following the von Mises distribution.
 
-A Bayesian circular regression analysis has been developed by \citet{gill2010}, using starting values from a frequentist iterative reweighted least squares (IRLS) algorithm, which is similar to that used by \citet{fisher1992regression}. \citet{gill2010} note that the likelihood function of the regression coefficients from their model is not globally log-concave, which might cause the algorithm to converge to a local maximum. To combat this, \citet{gill2010} advise careful inspection of the likelihood surface of the regression coefficients. Drawbacks of the approach taken by \citet{gill2010} are that a prior is not specified, the algorithm is slow, categorical predictors are not treated separately and for larger models it may be unclear whether the regression coefficients have converged to the global maximum.
+A Bayesian circular regression analysis has been developed by \citet{gill2010}, using starting values from a frequentist iterative reweighted least squares (IRLS) algorithm, which is similar to that used by \citet{fisher1992regression}. \citet{gill2010} note that the likelihood function of the regression coefficients from their model is not globally logarithmically concave, which might cause the algorithm to converge to a local maximum. To combat this, \citet{gill2010} advise careful inspection of the likelihood surface of the regression coefficients. Drawbacks of the approach taken by \citet{gill2010} are that a prior is not specified, the algorithm is slow, categorical predictors are not treated separately and for larger models it may be unclear whether the regression coefficients have converged to the global maximum.
 
-Recent work has provided a multivariate extension of the von Mises distribution \citep{mardia2008multivariate,mardia2014some}, which offers a promising new way of thinking about circular covariate models. The multivariate von Mises was applied in this context by \citet{lagona2015regression} within a Generalized Linear Model (GLM) setting, applying MCMC likelihood approximation as in \citet{geyer1992constrained} to compute maximum likelihood estimates. This approach is not Bayesian, but it is a promising approach because of its flexibility, allowing both the mean and concentration to be dependent on an arbitrary set of covariates, as well as allowing observations to be dependent.
+Recent work has provided a multivariate extension of the von Mises distribution \citep{mardia2008multivariate,mardia2014some}, which offers a promising new way of thinking about circular covariate models. The multivariate von Mises was applied in this context by \citet{lagona2016regression} within a Generalized Linear Model (GLM) setting, applying MCMC likelihood approximation as in \citet{geyer1992constrained} to compute maximum likelihood estimates. This approach is not Bayesian, but it is a promising approach because of its flexibility, allowing both the mean and concentration to be dependent on an arbitrary set of covariates, as well as allowing observations to be dependent.
 
 There are three main drawbacks of the circular GLM approach  to circular data analysis currently. First, the GLM approach is not free from the lack of concavity as described in \citet{gill2010}, although this has not yet been investigated in detail. Second, the current approach does not have separate parameters for differences in group mean direction, which precludes the popular ANCOVA model to some extent. Third, Bayesian hypothesis tests for this model are not available, which limits its applicability.
 
@@ -184,9 +184,9 @@ Consider a dataset \( \{ \theta_i, \bx_i, \bd_i \}, (i = 1, \dots, n) \), where 
 \begin{equation}
 \mu_i = \beta_0 + \bdt^T \bd_i + g(\bbt^T \bx_i),
 \end{equation}
-where \( \beta_0 \in [-\pi, \pi) \) is an offset parameter which serves as a circular intercept, \( \bdt \in [-\pi, \pi)^J \) is a column vector of circular group difference parameters, \( g(\cdot) : \mathbb{R} \rightarrow \mathbb{S} \) is a twice differentiable link function, and \(\bbt \in \mathbb{R}^K \) is a column vector of regression coefficients. \citet{jammalamadaka2001topics} and \citet{fisher1992regression} discuss the choice of the link function. A common and natural choice for the link function is \( g(x) = 2 \tan^{-1}(x),\) which we will focus on here.
+where \( \beta_0 \in [-\pi, \pi) \) is an offset parameter which serves as a circular intercept, \( \bdt \in [-\pi, \pi)^J \) is a column vector of circular group difference parameters, \( g(\cdot) : \mathbb{R} \rightarrow (-\pi, \pi) \) is a twice differentiable link function, and \(\bbt \in \mathbb{R}^K \) is a column vector of regression coefficients. \citet{jammalamadaka2001topics} and \citet{fisher1992regression} discuss the choice of the link function. A common and natural choice for the link function is \( g(x) = 2 \tan^{-1}(x),\) which we will focus on here.
 
-This model specification differs from the usual approach to circular regression models, as these generally set \( \mu_i = \beta_0 + g(\bbt^T \bx_i)\) \citep{fisher1992regression, gill2010, lagona2015regression}. However, we view this model as unsatisfactory when including dichotomous predictors in \( \bx \), which we will illustrate in Figure \ref{parallelnonparallel}. Consider a single dichotomous predictor \( d \) added to a model with a single continuous predictor \( x \). The dichotomous predictor might be added into the model as \( \mu = \beta_0 + g(\beta x + \delta d ) \). Adding \( \delta \) in the link function shifts the location of the prediction line, but also its shape. Therefore, the shape for \( d = 0 \) is fixed, but for \( d = 1 \) the shape is dependent on a free parameter, \( \delta \). This makes the shape of the prediction line (and therefore the analysis) depend on the arbitrary choice of reference group, which can be seen in Figure \ref{nonparallel}. To solve this, we advocate setting \( \mu = \beta_0 + \delta d + g(\beta x ) \), the resulting prediction lines of which are shown in Figure \ref{parallel}.
+This model specification differs from the usual approach to circular regression models, as these generally set \( \mu_i = \beta_0 + g(\bbt^T \bx_i)\) \citep{fisher1992regression, gill2010, lagona2016regression}. However, we view this model as unsatisfactory when including dichotomous predictors in \( \bx \), which we will illustrate in Figure \ref{parallelnonparallel}. Consider a single dichotomous predictor \( d \) added to a model with a single continuous predictor \( x \). The dichotomous predictor might be added into the model as \( \mu = \beta_0 + g(\beta x + \delta d ) \). Adding \( \delta \) in the link function shifts the location of the prediction line, but also its shape. Therefore, the shape for \( d = 0 \) is fixed, but for \( d = 1 \) the shape is dependent on a free parameter, \( \delta \). This makes the shape of the prediction line (and therefore the analysis) depend on the arbitrary choice of reference group, which can be seen in Figure \ref{nonparallel}. To solve this, we advocate setting \( \mu = \beta_0 + \delta d + g(\beta x ) \), the resulting prediction lines of which are shown in Figure \ref{parallel}.
 
 \begin{figure}
 
@@ -264,48 +264,49 @@ This prior indicates that given a mean direction for some reference group, there
 
 For each \(\beta_k\) there is no natural uninformative prior. A constant prior \( p(\beta_k) \propto 1 \) could be employed. However, as noted by \citet{fisher1995statistical} and \citet{gill2010}, this leads to a posterior of irregular form, including local maxima and non-zero asymptotes, as shown in Figure \ref{BetaConstantPrior}.
 
-Note that because the linear predictors are standardized, the interpretation of the size of \( \beta \) is equal across studies. Therefore, we can determine a priori which values of \( \beta_k \) would be probable in real research scenarios. In this case, if \( \sum_{k=1}^K \vert \beta_k \vert > 1.5 \), the majority of the probability mass of the data is on the semi-circle opposite of the group intercept \( (\beta_0 + \bdt^T \bd),\) which is not likely in practice. This expectation can be translated to a weakly informative prior distribution. So, the prior is chosen to be
+However, because the linear predictors are standardized, the interpretation of the size of \( \beta \) is equal across studies. Therefore, we can determine a priori which values of \( \beta_k \) would be probable in practical research scenarios. In this case, if \( \sum_{k=1}^K \vert \beta_k \vert > 1.5 \), the majority of the probability mass of the data is on the semi-circle opposite of the group intercept \( (\beta_0 + \bdt^T \bd),\) which is not likely in practice. This expectation can be translated to a weakly informative prior distribution. Here, this was done by setting the prior as
 \begin{equation}
-\beta_k \sim N(0, 1), ~ \forall k = 1, \dots, K,
+\beta_k \sim N(0, \sigma^2), ~ \forall k = 1, \dots, K,
 \end{equation}
- where \( N(\mu, \sigma^2) \) denotes the Normal distribution with mean \( \mu \) and variance \( \sigma^2.\) The resulting posterior is compared to the constant prior in Figure \ref{LikelihoodPriorComparisonBeta}. It can be seen that the problematic asymptotes in Figure \ref{BetaConstantPrior} are solved in Figure \ref{BetaNormalPrior}. In neither case the posterior is log-concave, which might make optimization difficult, but which MCMC methods handle well.
+ where \( N(\mu, \sigma^2) \) denotes the Normal distribution with mean \( \mu \) and variance \( \sigma^2\). For a Normal prior with any finite \(\sigma^2\), there are no non-zero asymptotes in the conditional posterior of \(\beta\) for any values of \(\beta_0, \kappa, \boldsymbol{\delta},\) because \(\log f_N(x \mid 0, \sigma^2) \rightarrow -\infty\) as \(\vert x \vert \rightarrow \infty.\) As \( \sigma^2 \rightarrow 0,\) the prior becomes more informative and the posterior for \( \beta_k \) centers on 0. As \( \sigma^2 \rightarrow \infty,\) the prior becomes less informative, but the posterior becomes more irregular, with large plateaus and more local maxima.   By default, we choose \( \sigma^2 = 1\) so that the prior is the standard Normal distribution, which represents the weakly informative prior mentioned previously, for which values of \( \vert\beta_k\vert > 1.5 \) are a priori unlikely.
 
-
+To illustrate this, the resulting posterior is compared to the constant prior in Figure \ref{LikelihoodPriorComparisonBeta}. The posterior is based on a synthetic data set of 7 observations with a single predictor \(\bx = -3, \dots, 3,\) which is standardized and the outcome is then computed as \( \theta_i =  2 \tan^{-1}(x_i) + \varepsilon_i \) where \( \varepsilon_i \sim N(0, 1/10),\) so the true \(\beta\) is 1. In Figure \ref{LikelihoodPriorComparisonBeta}, the conditional posterior of \(\beta\) is displayed given \(\beta_0 = 0, \kappa = 1.\) Figure \ref{BetaConstantPrior} gives a zoomed-out view of the constant prior, where the asymptotes are clearly visible. Figure \ref{BetaNormalPrior} shows a zoomed-in view of the resulting conditional posterior from a prior with \(\sigma^2 = 1/5\) (dashed), \(\sigma^2 = 1\) (dashed), \(\sigma^2 = 5\) (dotted). It can be seen that the \(N(0, 5)\) prior takes a shape not unlike the constant prior in Figure~\ref{BetaConstantPrior}, although the asymptote is avoided. The \(N(0, 1/5)\) prior can be seen to have a strong influence on the posterior estimate for this data where the true \(\beta = 1.\) The \(N(0, 1)\) prior represents a balance for which the asymptotes are solved, but the posterior estimates are very close to the maximum likelihood estimates. In practical settings generally \(\vert\beta\vert << 1,\) so that the influence of the prior will often be minimal. For these priors the posterior not necessarily logarithmically concave, which might make optimization difficult, but which MCMC methods handle well.
 
 <<dataForLikelihoodPriorPicture>>=
+set.seed(329812)
 n <- 7
 X  <- scale(as.matrix(seq(-3, 3, length.out = n)))
 bt <- 1
-th <- pi + atanLF(bt*X, 2) + rnorm(n, 0, .1)
-d <- data.frame(th=th, X=X)
-res <- 400
+th <-  atanLF(bt*X, 2) + rnorm(n, 0, .1)
+d <- data.frame(th = th, X = X)
+res <- 1000
 b0cur <- 0
-xl <- 40 * c(-1, 1)
+xl <- 8 * c(-1, 1)
+ymin = -23; ymax = -9
 @
 
 \begin{figure}
-
-
-\begin{subfigure}[b]{0.5\textwidth}
+\begin{subfigure}[t]{0.5\textwidth}
 <<BetaConstantPrior>>=
-plotbeta(normalPrior=FALSE, res=res, xl=xl, b0=0, kp=1, r=2, th=th, X=X) +
+plotbeta(normalPrior=FALSE, res=res, xl=xl*6, b0=b0cur, kp=1, r=2, th=th, X=X) +
   myTheme + labs(x = "$\\beta$", y = "Conditional log-posterior of $\\beta$")
-
 @
 \caption{$p(\beta_k) \propto 1$}
 \label{BetaConstantPrior}
 \end{subfigure}
 ~
-\begin{subfigure}[b]{0.5\textwidth}
+\begin{subfigure}[t]{0.5\textwidth}
 <<BetaNormalPrior>>=
-plotbeta(normalPrior=TRUE, res=res, xl=xl, b0=0, kp=1, r=2, th=th, X=X) +
-  myTheme + labs(x = "$\\beta$", y = "Conditional log-posterior of $\\beta$")
+plotbeta(normalPrior=TRUE, res=res, xl=xl, b0=b0cur, kp=1, r=2, th=th, X=X, sds = c(1, .2, 5)) +
+  myTheme + labs(x = "$\\beta$", y = "Conditional log-posterior of $\\beta$")  +
+  coord_cartesian(ylim = c(ymin, ymax))
 @
-\caption{$p(\beta_k) \propto N(0, 1)$}
+\caption[;  ; ]
+    {\tabular[t]{@{}l@{}l@{}}$p(\beta_k)~\propto~N(0,~1/5)$~(dashed) \\ $p(\beta_k)~\propto~N(0,~1)$~(solid) \\ $p(\beta_k)~\propto~N(0,~5)$~(dotted) \endtabular}
 \label{BetaNormalPrior}
 \end{subfigure}
 
-\caption{Comparison of the conditional log-posterior of $\beta_k$ when using (a) a constant prior, which means the log-posterior is equal to the log-likelihood, and (b) a Normal prior $N(0, 1)$.}
+\caption{Comparison of the conditional log-posterior of $\beta_k$ when using (a) a constant prior, which means the log-posterior is equal to the log-likelihood, and (b) a Normal prior with three different values for \(\sigma^2\).}
 \label{LikelihoodPriorComparisonBeta}
 \end{figure}
 
@@ -613,15 +614,13 @@ colNamesANCOVA     <- c("$\\beta , \\delta$", "$\\kappa$", "n",
                         "$\\hat{\\beta}_1$", "Cov.", "Acc.",
                         "MCT")
 
-
-
 SSRancovafull %>%
   mutate(pred = sapply(SSRancovafull$pred, first)) %>%
   mutate(kp = makeRepeatedNA(kp), bt_true = makeRepeatedNA(pred)) %>%
   select(one_of(chosenColsANCOVA)) %>%
   xtable(caption = "Results of the simulation study for the ANCOVA scenario. 'Cov.' denotes the 95\\% coverage for a specific parameter, while 'Acc.' denotes the acceptance probability. MCT denotes the mean computation time in seconds.",
          label = "tableANCOVA",
-         digits = c(0, 2, 0, 0, rep(2, length(chosenColsANCOVA)-3))) -> tableANCOVA
+         digits = c(0, 2, 0, 0, rep(2, length(chosenColsANCOVA) - 3))) -> tableANCOVA
 
 colnames(tableANCOVA) <- colNamesANCOVA
 
@@ -638,6 +637,7 @@ print(tableANCOVA,
       latex.environments = c("center", "small")
 )
 @
+
 Here, a single grouping variable was generated as in Section \ref{FacANOVA}, while the linear covariates were generated as in Section \ref{SimpleRegression}. Then, the outcome is computed by
 \begin{equation}
 \theta_i = \pi/2 + \delta_1 d_{1i} + g(\beta_1 x_{i1} + \beta_2 x_{i2} + \beta_3 x_{i3} + \beta_4 x_{i4}) + \varepsilon_i,
@@ -719,7 +719,7 @@ levels(dpd$Group) <- c("Deaf", "Interpreter", "Control")
 
 In this section, our method will be applied to data from \citet{van2013superior}. In this study, an experiment was conducted to assess whether deafness enhances haptic perception. Haptic perception is assessed here by means of a haptic parallel setting task, where subjects are required to set two bars parallel, so that errors are measured in an angular differece to the reference direction. In this task, errors generally fall in the counterclockwise direction, which produces a positive score on the deviation from the target. Therefore, groups that are less apt at this task are expected to have stronger positive deviations, counterclockwise from the reference direction.
 
-Three groups are distinguished: deaf subjects, sign language interpreters and a control group. Table \ref{ExampleDescrTable} shows some summary statistics of background variables for the three groups, as well as the main outcome, deviation. Note that the original study discusses two different conditions, an "immediate" and a "delayed" condition, of which we only show the "immediate" outcome for illustration purposes. Analyses for the "delayed" condition were similar.
+Three groups are distinguished: deaf subjects, sign language interpreters and a control group. Table \ref{ExampleDescrTable} shows some summary statistics of background variables for the three groups, as well as the main outcome, deviation. Note that the original study examines two different conditions in a repeated measures design, an "immediate" and a "delayed" condition, of which we only show the "immediate" outcome for illustration purposes. Analyses for the "delayed" condition were similar.
 
 The analysis will proceed as follows. First, a basic ANOVA model will be fitted to this dataset. Then, an ANCOVA model is examined. Lastly, informative inequality constrained hypotheses based on theory are evaluated.
 
@@ -763,6 +763,7 @@ dpd %>%
   mutate(Deviation    = imdev_signed * pi / 180,
          Deaf         = as.numeric(Group == "Deaf"),
          Interpreter  = as.numeric(Group == "Interpreter")) -> ANOVApd
+
 anovaModel <- circGLM(th = ANOVApd$Deviation, X = ANOVApd[, c("Deaf", "Interpreter")], Q = 100000, burnin = 1000,
                       returnPostSample = TRUE, debug = FALSE, loopDebug = FALSE)
 
@@ -794,12 +795,11 @@ anovaTab <- with(anovaModel, rbind("$\\beta_0$" = c(b0_meandir, b0_CCI),
 colnames(anovaTab) <- c("Estimate", "LB", "UB")
 @
 
-The goal in the ANOVA model is to assess whether the three groups differ. For this and all following models, the control group will be used as the reference group. The outcome in the ANOVA model is given by \( \theta_i \sim \mathcal{M}(\mu_i, \kappa), \) where \( \mu_i = \beta_0 + \delta_{df} d_{df} + \delta_{in} d_{in}\), where \( d_{df} \) and \( d_{in} \) are dummy variables for the deaf and interpreter group, respectively, and each \( \delta \) is labeled appropriately. The main hypothesis is that the deaf group performs better than the control group, which ould manifest itself as \( \delta_{df} < 0.\) Second, interpreters might also outperform the control group, which would mean \( \delta_{in} < 0.\)
+The goal in the ANOVA model is to assess whether the three groups differ. For this and all following models, the control group will be used as the reference group. The outcome in the ANOVA model is given by \( \theta_i \sim \mathcal{M}(\mu_i, \kappa), \) where \( \mu_i = \beta_0 + \delta_{df} d_{df} + \delta_{in} d_{in}\), where \( d_{df} \) and \( d_{in} \) are dummy variables for the deaf and interpreter group, respectively, and each \( \delta \) is labeled appropriately. The main hypothesis is that the deaf group performs better than the control group, which could manifest itself as \( \delta_{df} < 0.\) Second, interpreters might also outperform the control group, which would mean \( \delta_{in} < 0.\)
 
 A burn-in of 1000 was used, and the MCMC sampler was run for 100000 iterations. Figure \ref{ANOVAConvergencePlot} shows convergence plots for the four model parameters, where it can be seen that the sampler converges well.
 
-Results are shown in Table \ref{ANOVATable}. Estimates are given by the posterior mean direction of \( \beta_0, \delta_{df}, \delta_{in} \) and  the posterior mode of \( \kappa.\)
-The credible interval of  \( \delta_{df} \), the difference between the deaf group mean direction and the control group mean direction, is given by \Sexpr{paste0("(", round(anovaTab[3, "LB"], 2), ", ", round(anovaTab[3, "UB"], 2), ")")}, which can be seen as evidence for a non-zero group difference, as zero is not in this interval. The credible interval for the interpreter group mean direction is \Sexpr{paste0("(", round(anovaTab[4, "LB"], 2), ", ", round(anovaTab[4, "UB"], 2), ")")}, which can be seen as evidence against a non-zero group difference.
+Results are shown in Table \ref{ANOVATable}. Estimates are given by the posterior mean direction of \( \beta_0, \delta_{df}, \delta_{in} \) and  the posterior mode of \( \kappa.\) The credible interval of  \( \delta_{df} \), the difference between the deaf group mean direction and the control group mean direction, is given by \Sexpr{paste0("(", round(anovaTab[3, "LB"], 2), ", ", round(anovaTab[3, "UB"], 2), ")")}, which can be seen as evidence for a non-zero group difference, as zero is not in this interval. The credible interval for the interpreter group mean direction is \Sexpr{paste0("(", round(anovaTab[4, "LB"], 2), ", ", round(anovaTab[4, "UB"], 2), ")")}, which can be seen as evidence against a non-zero group difference.
 
 <<ANOVATable, results='asis'>>=
 xANOVATab <- xtable(anovaTab,
@@ -817,7 +817,12 @@ print(xANOVATab,
 
 \begin{figure}
 <<ANOVAConvergencePlot, fig.width=big.fig.width, fig.height=big.fig.height>>=
-plot(anovaModel, type = "stack", ggTheme = myTheme, labelFormat = "latex") + theme(panel.margin = unit(0.5, "lines"))
+plot(anovaModel, type = "stack", ggTheme = myTheme, labelFormat = "latex") + theme(panel.spacing = unit(0.5, "lines"))
+
+circGLM(th = ANOVApd$Deviation,
+        X  = ANOVApd[, c("Deaf", "Interpreter")], Q = 100000, burnin = 1000,
+        returnPostSample = TRUE, debug = FALSE, loopDebug = FALSE)
+
 @
 \caption{Convergence plots for the ANOVA model.}
 \label{ANOVAConvergencePlot}
@@ -826,7 +831,9 @@ plot(anovaModel, type = "stack", ggTheme = myTheme, labelFormat = "latex") + the
 %\subsubsection{Bayes factors for the ANOVA model}
 
 % In Table \ref{ANOVABFTable}, Bayes factors and posterior model probabilities are provided for simple hypotheses on the relationships of the posterior means.
-A more sophisticated approach is to employ the hypothesis tests that were developed. Employing the equality constrained hypotheses, a mild amount of support was found in favor of the hypothesis that deaf participants differ from the controls (\( BF_{\mu_{cn} \neq \mu_{df}:\mu_{cn} = \mu_{df}} = \) \Sexpr{round(1/anovaBFTab[1, 4], 2)}), while  a mild amount of support was found against  the hypothesis that deaf participants differ from sign language interpreters  (\( BF_{\mu_{in} \neq \mu_{df}:\mu_{in} = \mu_{df}} = \) \Sexpr{round(1/anovaBFTab[3, 4], 2)}). This highlights that this method is conservative in supporting alternative hypotheses such as \( H_1 : \mu_{in} \neq \mu_{df}.\) This is a result of the circular uniform prior on \( \delta \), which suggests that more subjective approach could be less conservative and more likely to pick up on group differences. For example, a von Mises prior on \( \delta \) with \( \kappa > 0\) could be used.
+A more sophisticated approach is to employ the hypothesis tests that were developed. Employing the equality constrained hypotheses, a mild amount of support was found in favor of the hypothesis that deaf participants differ from the controls (\( BF_{\mu_{cn} \neq \mu_{df}:\mu_{cn} = \mu_{df}} = \) \Sexpr{round(1/anovaBFTab[1, 4], 2)}), while  a mild amount of support was found against  the hypothesis that deaf participants differ from sign language interpreters  (\( BF_{\mu_{in} \neq \mu_{df}:\mu_{in} = \mu_{df}} = \) \Sexpr{round(1/anovaBFTab[3, 4], 2)}).
+
+This highlights that this method is conservative in supporting alternative hypotheses such as \( H_1 : \mu_{in} \neq \mu_{df}.\) This is a result of the circular uniform prior on \( \delta \), which suggests that more subjective approach could be less conservative and more likely to pick up on group differences. For example, a von Mises prior on \( \delta \) with \( \kappa > 0\) could be used. This subjective prior represents the knowledge that mean directions of different groups are usually somewhat close together. In this case, selection of the \( \kappa \) to be used becomes a core issue, which represents a trade-off between the amount additional power for the hypothesis test and the amount of (potentially unwanted) prior information included in the analysis.
 
 The inequality hypothesis tests show a large amount of support for the hypothesis that deaf participants perform better than the controls (\( BF_{\mu_{cn} > \mu_{df}:\mu_{cn} < \mu_{df}} = \) \Sexpr{round(anovaBFTab[1, 1], 2)}), and for the hypothesis that deaf participants perform better than sign language interpreters (\( BF_{\mu_{in} > \mu_{df}:\mu_{in} < \mu_{df}} = \) \Sexpr{round(1/anovaBFTab[3, 1], 2)}).
 
@@ -937,7 +944,7 @@ Following this method, we find that \( H_1 \) is true in \Sexpr{round(fitH1*100,
 \label{discussion}
 
 
-We developed a Bayesian circular GLM, with appropriate priors, proper treatment of dichotomous variables, and Bayesian hypothesis tests. Our method forms a middle ground between two veins of research into Bayesian analysis of circular data. On one hand, analysis of complex data shapes \citep{ghosh2003semiparametric, ferreira2008directional, fernandez2016bayesian} provides modeling for a broad class of datasets but few possibilities for prediction and covariate models. On the other hand, circular regression models \citep{fisher1992regression, gill2010, lagona2015regression} provide prediction and covariates, but encounter problems with likelihood shapes and a lack of available hypothesis tests. The GLM aproach is promising because of its flexibility to allow for many different kinds of models, while also allowing straightforward extensions. Our method brings three main contributions to the literature.
+We developed a Bayesian circular GLM, with appropriate priors, proper treatment of dichotomous variables, and Bayesian hypothesis tests. Our method forms a middle ground between two veins of research into Bayesian analysis of circular data. On one hand, analysis of complex data shapes \citep{ghosh2003semiparametric, ferreira2008directional, fernandez2016bayesian} provides modeling for a broad class of datasets but few possibilities for prediction and covariate models. On the other hand, circular regression models \citep{fisher1992regression, gill2010, lagona2016regression} provide prediction and covariates, but encounter problems with likelihood shapes and a lack of available hypothesis tests. The GLM aproach is promising because of its flexibility to allow for many different kinds of models, while also allowing straightforward extensions. Our method brings three main contributions to the literature.
 
 First, we have shown that the irregular log-likelihood surface of the regression parameters \( \bbt \) in a circular GLM can be dealt with naturally by employing a weakly informative prior that encapsulates our actual belief that extreme values for \( \bbt \) are unlikely in applied research, while we still let the data overpower the prior. This is analogous to the widely accepted idea that very large effect sizes, say, Cohen's \( d > 1 \), are improbable in most scientific disciplines where empirical research is necessary, in particular the social sciences. If the method would indicate support for such large values of \( \vert \beta \vert \), a researcher would not believe that the model is correct, and reassess it. Our prior simply represents the lack of belief in large values of \( \vert \beta \vert.\)
 
@@ -947,7 +954,7 @@ Third, we have developed Bayesian hypothesis tests based on the Bayes factor for
 
 Although the computational methods employed here are stable and allow for useful inferences, further consideration of useful hypotheses and their associated Bayes factors will be important for the applicability of the Bayesian paradigm to circular data analysis, in particular in behavioural research. Here, we have not provided Bayes factors based on estimation of the marginal likelihood as in \citet{chib1995marginal} and subsequent work in this field, although this approach might be more flexible than the methods applied here. Another approach might be to attempt to develop priors that allow for closed-form Bayes factors in a similar vein as the \(g\)-prior in the linear case \citep{zellner1986bayesian, liang2012mixtures}. The computational simplicity of such Bayes factors is useful in many scenarios, although the complexity of the designs for such Bayes factors are usually limited.
 
-In the broader scope of circular data analysis, our method can be seen as a Bayesian extension of the approaches of \citet{artes2008hypothesis} and \citet{lagona2015regression}. Further extensions of this model might ease the assumption of i.i.d. observations taken here by applying properties of the multivariate von Mises distribution \citep{mardia2008multivariate, mardia2014some}, as in \citet{lagona2015regression}.
+In the broader scope of circular data analysis, our method can be seen as a Bayesian extension of the approaches of \citet{artes2008hypothesis} and \citet{lagona2016regression}. Further extensions of this model might ease the assumption of i.i.d. observations taken here by applying properties of the multivariate von Mises distribution \citep{mardia2008multivariate, mardia2014some}, as in \citet{lagona2016regression}.
 
 In sum, the Bayesian approach provides a promising way to draw inference from circular data. Usual approaches are based on large sample or high concentration approximations \citep{artes2008hypothesis} or bootstrap approaches for simple models \citep{baayen2012test, baayen2014evaluating}. Our approach does not need such approximations, and provides a new direction for circular data analysis of GLM-type models.
 
